<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/fb_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="25dp"
                    android:text="@string/facebook"
                    android:textSize="20sp"
                    android:textColor="@color/fb_blue"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="25dp"
                        android:background="@null"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_search_24"
                        android:contentDescription="@string/search" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="25dp"
                        android:background="@null"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_store_24"
                        android:contentDescription="@string/marketplace" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="25dp"
                        android:background="@null"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_menu_24"
                        android:contentDescription="@string/menu" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelVisibilityMode="unlabeled"
                app:itemRippleColor="@null"
                app:elevation="0dp"
                app:menu="@menu/bottom_nav_menu" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/fb_app_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>